actix-derive/tests/trybuild/message-fail-bare-rtype.stderr
error: Expect type
 --> tests/trybuild/message-fail-bare-rtype.rs:7:18
  |
7 | #[rtype(result = Added)]
  |                  ^^^^^
